--- a/.github/workflows/autodoc.yml
+++ b/.github/workflows/autodoc.yml
@@ -15,3 +15,5 @@ jobs:
         ref: ${{ github.event.pull_request.head.ref }}
 
     - uses: pndurette/gh-actions-auto-docs@v1
+      with:
+        include_outputs: false
